--- a/src/styles/components/Sidebar.scss
+++ b/src/styles/components/Sidebar.scss
@@ -1,3 +1,5 @@
+@use '../utilities/variables.scss' as V;
+
 .sidebar {
     position: absolute;
     right: 0;
@@ -14,12 +16,11 @@
     align-items: center;
 
     background-color: rgba(110,110,100,0.25);
-    color: #4d4d4d;
+    color: #d8d8d8;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 
     z-index: 1;
-    overflow-y: scroll;
 
     h3 {
         font-size: 22px;
@@ -30,10 +31,12 @@
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
+
         width: 30vw;
         height: 60px;
         margin: 20px 0;
         background: #fff;
+        color: #4d4d4d;
         border-radius: 50px;
         opacity: 0.6;
 
@@ -47,48 +50,40 @@
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
+
             width: 75%;
             height: 60px;
             border-radius: 50px;
-        
-            background-color: #fff;
 
             input {
-                background-color: #fff;
                 width: 65%;
                 height: 60px;
-                outline: none;
             }
 
             button{
                 min-width: 40px;
                 min-height: 40px;
                 border-radius: 50%;
-                color: rgb(20, 30, 48);
+                color: V.$first-bg-color;
                 background-color: #c3dee9;
                 cursor: pointer;
             }
         }
     }
     
-    .history {
-        h3:hover {
-            color: #fff;
-        }
-
+    .search-history {
         ul {
             width: 25vw;
             padding-bottom: 1em;
             margin: 2em 0;
-            border-bottom: 1px solid rgb(255, 255, 255,0.6);
-            list-style: none;
+            border-bottom: 1px solid rgb(255,255,255,0.6);
 
             li {
                 margin: 2.5em 0;
                 cursor: pointer;
 
                 &:hover {
-                    color: #fff;
+                    color: #eeeeee;
                 }
             }
         }
@@ -100,24 +95,19 @@
     
         display: flex;
         flex-direction: column;
-        cursor: default;
-
-        i {
-            font-size: 22px;
-            margin-right: 10px;
-        
-            align-self: center;
-        }        
-
-        h3:hover, i:hover, p:hover, span:hover {
-            color: #fff;
-        }
 
         #cloudy, #humidity, #wind {
             display: flex;
             flex-direction: row;
         
             margin: 1em 0;
+
+            i {
+                font-size: 22px;
+                margin-right: 10px;
+            
+                align-self: center;
+            }
         }
     }
 }
