--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,8 @@
 @use './utilities/variables' as V;
 
+//LoadingSpinner
+@use './components/LoadingSpinner.scss';
+
 //WeatherDisplay
 @use './components/WeatherDisplay.scss';
 
@@ -12,8 +15,78 @@
     box-sizing: border-box;
     font-family: "roboto", sans-serif;
     text-decoration: none;
+    list-style: none;
+    outline: none;
+    user-select: none;
 }
 
 body{
-    background: linear-gradient(to right, rgb(20, 30, 48), rgb(36, 59, 85));
+    background: linear-gradient(to right, V.$first-bg-color, V.$second-bg-color);
+}
+
+@media screen and (max-width: 1050px) {
+    #city {
+        font-size: 20px;
+    }
+    .search-box input {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .weather-display {
+        width: 100%;
+        height: 35vh;
+        padding: 0 25px;
+    }
+
+    #temp {
+        font-size: 60px;
+    }
+
+    #time, #description {
+        font-size: 15px;
+    }
+
+    .sidebar {
+        top: 35vh;
+    
+        width: 100%;
+        height: auto;
+
+        overflow: hidden;
+    }
+
+    .search-box {
+        min-width: 70vw;
+    }
+
+    .search-history ul {
+        min-width: 70vw;
+    }
+    
+    .weather-details {
+        min-width: 70vw;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .weather-display {
+        img {
+            width: 55px;
+            height: 55px;
+        }
+    
+        #temp {
+            font-size: 80px;
+        }
+    
+        #city {
+            font-size: 30px;
+        }
+        
+        #time, #description {
+            font-size: 15px;
+        }
+    }
 }
