--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -54,19 +54,26 @@ body{
         width: 100%;
         height: auto;
 
-        overflow: hidden;
-    }
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
 
-    .search-box {
-        min-width: 70vw;
-    }
-
-    .search-history ul {
-        min-width: 70vw;
-    }
+        .search-box {
+            min-width: 70vw;
+            margin: 20px 100px;
+        }
     
-    .weather-details {
-        min-width: 70vw;
+        .search-history { 
+            ul {
+                min-width: 30vw;
+                border: none;
+            }
+        }
+        
+        .weather-details {
+            min-width: 25vw;
+            height: 347px;
+        }
     }
 }
 
@@ -88,5 +95,49 @@ body{
         #time, #description {
             font-size: 15px;
         }
+    }
+
+    .sidebar {
+        flex-wrap: nowrap;
+        flex-direction: column;
+        align-items: center;
+
+        .search-box {
+            margin: 20px 0;
+        }
+    
+        .search-history {
+            ul {
+                width: 50vw;
+                border-bottom: 1px solid rgb(255,255,255,0.6);
+            }
+        }
+    
+        .weather-details {
+            width: 50vw;
+        }
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .weather-display {
+        padding: 0 15px;
+
+        #temp {
+            font-size: 70px;
+        }
+    
+        #city {
+            font-size: 30px;
+        }
+        
+        #time, #description {
+            font-size: 15px;
+        }
+    }
+
+    .error-box {
+        padding: 10px 20px;
+        width: 300px;
     }
 }
