--- a/src/styles/components/LoadingSpinner.scss
+++ b/src/styles/components/LoadingSpinner.scss
@@ -1,11 +1,10 @@
+@use '../utilities/mixins' as M;
+
 .loading-box {
     width: 100vw;
     height: 100vh;
     
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @include M.flex-settings(column, center);
 
     img {
         width: 60px;
