--- a/src/styles/components/WeatherDisplay.scss
+++ b/src/styles/components/WeatherDisplay.scss
@@ -1,15 +1,14 @@
 @use '../utilities/variables.scss' as V;
+@use '../utilities/mixins.scss' as M;
 
 .weather-display {
+    @include M.flex-settings(row, space-between, nowrap, flex-end);
+
     color: #fff;
     width: 65vw;
     height: 100vh;
     padding: 50px;
     text-align: center;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
 
     img {
         width: 75px;
@@ -37,9 +36,6 @@
     left: 0;
 
     display: none;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
 
     background: V.$error-bg-color;
     color: V.$error-text-color;
@@ -61,7 +57,7 @@
 }
 
 .show {
-    display: flex;
+    @include M.flex-settings(row, flex-start, nowrap);
     animation: slide 1s ease forwards;
 }
 
@@ -77,5 +73,71 @@
     }
     100% {
         transform: translateX(0%);
+    }
+}
+
+@media screen and (max-width: 1050px) {
+    #city {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .weather-display {
+        width: 100%;
+        height: 35vh;
+        padding: 0 25px;
+
+        #temp {
+            font-size: 60px;
+        }
+    
+        #time, #description {
+            font-size: 15px;
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .weather-display {
+        img {
+            width: 55px;
+            height: 55px;
+        }
+    
+        #temp {
+            font-size: 80px;
+        }
+    
+        #city {
+            font-size: 30px;
+        }
+        
+        #time, #description {
+            font-size: 15px;
+        }
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .weather-display {
+        padding: 0 15px;
+
+        #temp {
+            font-size: 70px;
+        }
+    
+        #city {
+            font-size: 30px;
+        }
+        
+        #time, #description {
+            font-size: 15px;
+        }
+    }
+
+    .error-box {
+        padding: 10px 20px;
+        width: 300px;
     }
 }
