--- a/src/styles/components/WeatherDisplay.scss
+++ b/src/styles/components/WeatherDisplay.scss
@@ -1,31 +1,40 @@
 @use '../utilities/variables.scss' as V;
 @use '../utilities/mixins.scss' as M;
 
+// Error toast variables
+$error-text-color: rgb(73, 9, 9);
+$error-bg-color: rgba(160, 39, 39,0.9);
+
 .weather-display {
-    @include M.flex-settings(row, space-between, nowrap, flex-end);
+    width: 100%;
+    height: 100%;
 
-    color: #fff;
-    width: 65vw;
-    height: 100vh;
-    padding: 50px;
-    text-align: center;
-
-    img {
-        width: 75px;
-        height: 75px;
-    }
-
-    #temp {
-        font-size: 100px;
-    }
-
-    #city {
-        font-size: 40px;
-    }
+    section {
+        @include M.flex-settings(row, space-between, nowrap, flex-end);
     
-    #time, #description {
-        font-size: 20px;
-        padding-bottom: 20px;
+        color: #fff;
+        width: 65vw;
+        height: 100vh;
+        padding: 50px;
+        text-align: center;
+    
+        img {
+            width: 75px;
+            height: 75px;
+        }
+    
+        #temp {
+            font-size: 100px;
+        }
+    
+        #city {
+            font-size: 40px;
+        }
+        
+        #time, #description {
+            font-size: 20px;
+            padding-bottom: 20px;
+        }
     }
 }
 
@@ -37,14 +46,14 @@
 
     display: none;
 
-    background: V.$error-bg-color;
-    color: V.$error-text-color;
+    background: $error-bg-color;
+    color: $error-text-color;
     
     padding: 20px 40px;
     width: 375px;
 
     border-radius: 4px;
-    border-right: 8px solid V.$error-text-color;
+    border-right: 8px solid $error-text-color;
 
     i {
         font-size: 30px;
@@ -83,7 +92,7 @@
 }
 
 @media screen and (max-width: 800px) {
-    .weather-display {
+    .weather-display section {
         width: 100%;
         height: 35vh;
         padding: 0 25px;
@@ -95,7 +104,7 @@
 }
 
 @media screen and (max-width: 600px) {
-    .weather-display {
+    .weather-display section {
         img {
             width: 55px;
             height: 55px;
@@ -116,7 +125,7 @@
 }
 
 @media screen and (max-width: 400px) {
-    .weather-display {
+    .weather-display section {
         padding: 0 15px;
 
         #temp {
