--- a/src/styles/components/LoadingSpinner.scss
+++ b/src/styles/components/LoadingSpinner.scss
@@ -6,19 +6,19 @@
     
     @include M.flex-settings(column, center);
 
-    img {
+    &__logo {
         width: 60px;
         height: 60px;
         animation: rotate 3s linear infinite;
     }
 
-    .spinner {
+    &__spinner {
         display: inline-block;
         position: relative;
         width: 80px;
         height: 80px;
 
-        div {
+        &__circle {
             position: absolute;
             top: 33px;
             width: 13px;
@@ -26,22 +26,19 @@
             border-radius: 50%;
             background: #fff;
             animation-timing-function: cubic-bezier(0, 1, 1, 0);
+            animation: loading-icon1 0.6s infinite;
 
             &:nth-child(1) {
                 left: 8px;
-                animation: loading-icon1 0.6s infinite;
             }
             &:nth-child(2) {
                 left: 8px;
-                animation: loading-icon2 0.6s infinite;
             }
             &:nth-child(3) {
                 left: 32px;
-                animation: loading-icon2 0.6s infinite;
             }
             &:nth-child(4) {
                 left: 56px;
-                animation: loading-icon3 0.6s infinite;
             }
         }
     }
