--- a/src/styles/components/WeatherDisplay.scss
+++ b/src/styles/components/WeatherDisplay.scss
@@ -5,36 +5,45 @@
 $error-text-color: rgb(73, 9, 9);
 $error-bg-color: rgba(160, 39, 39,0.9);
 
-.weather-display {
+main {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
     height: 100%;
 
     section {
-        @include M.flex-settings(row, space-between, nowrap, flex-end);
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.weather-display {
+    @include M.flex-settings(row, space-between, nowrap, flex-end);
+
+    color: #fff;
+    width: 65vw;
+    height: 100vh;
+    padding: 50px;
+    text-align: center;
+
+    &__img {
+        width: 75px;
+        height: 75px;
+    }
+
+    &__temp {
+        font-size: 100px;
+    }
+
+    &__city {
+        font-size: 40px;
+    }
     
-        color: #fff;
-        width: 65vw;
-        height: 100vh;
-        padding: 50px;
-        text-align: center;
-    
-        img {
-            width: 75px;
-            height: 75px;
-        }
-    
-        #temp {
-            font-size: 100px;
-        }
-    
-        #city {
-            font-size: 40px;
-        }
-        
-        #time, #description {
-            font-size: 20px;
-            padding-bottom: 20px;
-        }
+    &__time,
+    &__description {
+        font-size: 20px;
+        padding-bottom: 20px;
     }
 }
 
@@ -55,19 +64,19 @@ $error-bg-color: rgba(160, 39, 39,0.9);
     border-radius: 4px;
     border-right: 8px solid $error-text-color;
 
-    i {
+    &__text {
         font-size: 30px;
         margin-left: 10px;
     }
     
-    span {
+    &__icon {
         font-size: 18px;
     }
-}
 
-.show {
-    @include M.flex-settings(row, flex-start, nowrap);
-    animation: slide 1s ease forwards;
+    &--show {
+        @include M.flex-settings(row, flex-start, nowrap);
+        animation: slide 1s ease forwards;
+    }
 }
 
 @keyframes slide {
@@ -86,53 +95,54 @@ $error-bg-color: rgba(160, 39, 39,0.9);
 }
 
 @media screen and (max-width: 1050px) {
-    #city {
+    .weather-display__city {
         font-size: 20px;
     }
 }
 
 @media screen and (max-width: 800px) {
-    .weather-display section {
+    .weather-display {
         width: 100%;
         height: 35vh;
         padding: 0 25px;
     
-        #time, #description {
+        &__time, &__description {
             font-size: 15px;
         }
     }
 }
 
 @media screen and (max-width: 600px) {
-    .weather-display section {
-        img {
+    .weather-display {
+        &__img {
             width: 55px;
             height: 55px;
         }
     
-        #temp {
+        &__temp {
             font-size: 75px;
         }
     
-        #city {
+        &__city {
             font-size: 25px;
         }
         
-        #time, #description {
+        &__time,
+        &__description {
             font-size: 15px;
         }
     }
 }
 
 @media screen and (max-width: 400px) {
-    .weather-display section {
+    .weather-display {
         padding: 0 15px;
 
-        #temp {
+        &__temp {
             font-size: 70px;
         }
     
-        #city {
+        &__city {
             font-size: 20px;
         }
     }
