Improve error handler :goal_net: and WeatherContext code structure/format :art:

--- a/src/styles/components/Sidebar.scss
+++ b/src/styles/components/Sidebar.scss
@@ -9,6 +9,7 @@ $sidebar-text-hover-color: #eeeeee;
 
 $search-box-color: #4d4d4d;
 $search-button-bg-color: #c3dee9;
+$search-button-bg-hover-color: #a3cfe0;
 
 $search-history-border: 1px solid rgb(255,255,255,0.6);
 
