--- a/src/styles/components/WeatherDisplay.scss
+++ b/src/styles/components/WeatherDisplay.scss
@@ -2,8 +2,8 @@
 @use '../utilities/mixins.scss' as M;
 
 // Error toast variables
-$error-text-color: rgb(73, 9, 9);
-$error-bg-color: rgba(160, 39, 39,0.9);
+$error-text-color: rgb(136, 42, 42);
+$error-bg-color: rgba(238, 180, 180, 0.9);
 
 main {
     background-size: cover;
@@ -58,39 +58,35 @@ main {
     background: $error-bg-color;
     color: $error-text-color;
     
-    padding: 20px 40px;
-    width: 375px;
+    padding: 25px;
+    max-width: 375px;
 
     border-radius: 4px;
     border-right: 8px solid $error-text-color;
 
     &__text {
-        font-size: 30px;
-        margin-left: 10px;
+        font-size: 20px;
+        margin-right: 15px;
     }
     
     &__icon {
-        font-size: 18px;
+        font-size: 20px;
     }
 
     &--show {
-        @include M.flex-settings(row, flex-start, nowrap);
-        animation: slide 1s ease forwards;
+        @include M.flex-settings(row, space-between, nowrap);
+        animation: scale-horizontal 0.25s;
     }
 }
 
-@keyframes slide {
+@keyframes scale-horizontal {
     0% {
-        transform: translateX(-100%);
-    }
-    40% {
-        transform: translateX(10%);
-    }
-    80% {
-        transform: translateX(0%);
+        transform: scaleX(.4);
+        transform-origin: left center;
     }
     100% {
-        transform: translateX(0%);
+        transform: scaleX(1);
+        transform-origin: left center;
     }
 }
 
@@ -149,6 +145,6 @@ main {
 
     .error-box {
         padding: 10px 20px;
-        width: 300px;
+        max-width: 325px;
     }
 }
