--- a/src/styles/layouts/_Sidebar.scss
+++ b/src/styles/layouts/_Sidebar.scss
@@ -15,17 +15,13 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
 
 .sidebar {
     @include M.flex-settings(column);
-
     position: absolute;
     right: 0;
     top: 0;
-
     width: 35vw;
     height: 100vh;
-    
     border: 1px solid $sidebar-border-color;
     box-shadow: 0 8px 32px 0 $sidebar-shadow-color;
-
     background-color: $sidebar-bg-color;
     color: $sidebar-text-color;
     backdrop-filter: blur(10px);
@@ -41,7 +37,6 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
 
     &__search-box {
         @include M.flex-settings(row, space-evenly);
-
         width: 30vw;
         height: 60px;
         margin: 20px 0;
@@ -53,6 +48,12 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
         * {
             border: none;
             font-size: 22px;
+        }
+
+        &__icon {
+            margin-top: -2.5px;
+            width: 25px;
+            height: 25px;
         }
 
         &__form {
@@ -69,8 +70,9 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
         }
 
         &__button{
-            min-width: 40px;
-            min-height: 40px;
+            @include M.flex-settings(row, center);
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             color: V.$first-bg-color;
             background-color: $search-button-bg-color;
@@ -106,9 +108,9 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
             margin: 1em 0;
 
             &__icon {
-                font-size: 22px;
+                width: 25px;
+                height: 25px;
                 margin-right: 10px;
-            
                 align-self: center;
             }
         }
@@ -125,7 +127,6 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
     .sidebar {
         @include M.flex-settings(row, center, wrap);
         top: 35vh;
-    
         width: 100%;
         height: 70%;
 
