Revert "Update readme :memo:"
This reverts commit cc1f3cc145b7fe361a0b8ed90ed0e3e3baf1dc40.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,13 @@
-@use './utilities/_variables' as V;
+@use './utilities/variables' as V;
 
 //LoadingSpinner
-@use './layouts/_LoadingSpinner.scss';
+@use './components/LoadingSpinner.scss';
 
 //WeatherDisplay
-@use './layouts/_WeatherDisplay.scss';
+@use './components/WeatherDisplay.scss';
 
 //Sidebar
-@use './layouts/_Sidebar.scss';
+@use './components/Sidebar.scss';
 
 * {
     margin: 0;
