--- a/src/styles/components/Sidebar.scss
+++ b/src/styles/components/Sidebar.scss
@@ -15,13 +15,17 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
 
 .sidebar {
     @include M.flex-settings(column);
+
     position: absolute;
     right: 0;
     top: 0;
+
     width: 35vw;
     height: 100vh;
+    
     border: 1px solid $sidebar-border-color;
     box-shadow: 0 8px 32px 0 $sidebar-shadow-color;
+
     background-color: $sidebar-bg-color;
     color: $sidebar-text-color;
     backdrop-filter: blur(10px);
@@ -37,6 +41,7 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
 
     &__search-box {
         @include M.flex-settings(row, space-evenly);
+
         width: 30vw;
         height: 60px;
         margin: 20px 0;
@@ -48,12 +53,6 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
         * {
             border: none;
             font-size: 22px;
-        }
-
-        &__icon {
-            margin-top: -2.5px;
-            width: 25px;
-            height: 25px;
         }
 
         &__form {
@@ -70,9 +69,8 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
         }
 
         &__button{
-            @include M.flex-settings(row, center);
-            width: 40px;
-            height: 40px;
+            min-width: 40px;
+            min-height: 40px;
             border-radius: 50%;
             color: V.$first-bg-color;
             background-color: $search-button-bg-color;
@@ -108,9 +106,9 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
             margin: 1em 0;
 
             &__icon {
-                width: 25px;
-                height: 25px;
+                font-size: 22px;
                 margin-right: 10px;
+            
                 align-self: center;
             }
         }
@@ -127,6 +125,7 @@ $search-history-border: 1px solid rgb(255,255,255,0.6);
     .sidebar {
         @include M.flex-settings(row, center, wrap);
         top: 35vh;
+    
         width: 100%;
         height: 70%;
 
